pre-materials/setup/install_platform/deployment/monitoring/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
spec:
  rules:
  - host: prometheus-server.local
    http:
      paths:
        - backend:
            service:
              name: prometheus-service
              port:
                number: 8080
          path: /
          pathType: Prefix
